@@ -184,7 +184,7 @@ class TestHydrogenBondAnalysisMock(object):
             h = HydrogenBondAnalysis(universe, **kwargs)
             h._get_dh_pairs()
 
-    def test_first(self, universe):
+    def test_first_hbond(self, universe):
 
         h = HydrogenBondAnalysis(universe, **self.kwargs)
         h.run()
@@ -223,6 +223,20 @@ class TestHydrogenBondAnalysisTIP3P_GuessAcceptors_GuessHydrogens_UseTopology_(T
         'd_a_cutoff': 3.0,
         'd_h_a_angle_cutoff': 120.0
     }
+
+    def test_no_hydrogens(self, universe):
+        # If no hydrogens are identified at a given frame, check an
+        # empty donor atom group is created
+        test_kwargs = TestHydrogenBondAnalysisTIP3P.kwargs.copy()
+        test_kwargs['donors_sel'] = None         # use topology to find pairs
+        test_kwargs['hydrogens_sel'] = "name H"  # no atoms have name H
+
+        h = HydrogenBondAnalysis(universe, **test_kwargs)
+        h.run()
+
+        assert h._hydrogens.n_atoms == 0
+        assert h._donors.n_atoms == 0
+        assert h.hbonds.size == 0
 
 class TestHydrogenBondAnalysisTIP3P_GuessDonors_NoTopology(object):
     """Guess the donor atoms involved in hydrogen bonds using the partial charges of the atoms.
